--- a/admin/admin.html
+++ b/admin/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Site Admin</title>
+  <title>Emily Foister Site Admin</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <link href="https://cdn.jsdelivr.net/npm/quill@1.3.7/dist/quill.snow.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/quill@1.3.7/dist/quill.min.js"></script>
@@ -33,7 +33,6 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>Simple CMS</h1>
       <div class="row">
         <span id="who" class="muted"></span>
         <button id="logout" class="ghost hidden">Log out</button>
