--- a/admin/admin.html
+++ b/admin/admin.html
@@ -156,6 +156,14 @@ function initQuill(){
   }
   Quill.register(ImageWithAttrs, true);
 
+  // Disable color/background formats entirely
+  ['color','background'].forEach((name) => {
+    ['class','style'].forEach((type) => {
+      const attr = Quill.import(`attributors/${type}/${name}`);
+      if (attr) Quill.register(attr, false);
+    });
+  });
+
   const toolbarOptions = [
     ['bold','italic','underline'],
     [{ header: [4, false] }], // dropdown with H4 and normal
@@ -166,6 +174,13 @@ function initQuill(){
   window._quill = new Quill('#sec-body', {
     theme: 'snow',
     modules: { toolbar: toolbarOptions }
+  });
+
+  // Remove inline color on paste (especially from <a> tags)
+  window._quill.clipboard.addMatcher(Node.ELEMENT_NODE, (node, delta) => {
+    if (node.nodeName === 'A') node.removeAttribute('style');   // kill link inline styles
+    if (node.style && node.style.color) node.style.removeProperty('color'); // kill span color
+    return delta;
   });
 
   function uid(){ return Math.random().toString(36).slice(2)+Date.now(); }
@@ -409,4 +424,5 @@ window.addEventListener('DOMContentLoaded', async () => {
 });
 </script>
 </body>
+
 </html>
