--- a/index.html
+++ b/index.html
@@ -3,8 +3,31 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="image/x-icon" href="favicon.ico">
+
+<!-- Title & Description -->
 <title>Emily Foister</title>
+<meta name="description" content="I am a Postdoctoral Teaching Fellow at New York University. I research, write, and teach on feminism and women’s work, life writing, fan studies, and other weirder and wider topics in 20th and 21st century literature and culture.">
+
+<!-- Canonical -->
+<link rel="canonical" href="https://www.emilyfoister.com/">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:title" content="Emily Foister">
+<meta property="og:description" content="I am a Postdoctoral Teaching Fellow at New York University. I research, write, and teach on feminism and women’s work, life writing, fan studies, and other weirder and wider topics in 20th and 21st century literature and culture.">
+<meta property="og:image" content="https://www.emilyfoister.com/social-preview.jpg">
+<meta property="og:url" content="https://www.emilyfoister.com/">
+<meta property="og:type" content="website">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Emily Foister">
+<meta name="twitter:description" content="I am a Postdoctoral Teaching Fellow at New York University. I research, write, and teach on feminism and women’s work, life writing, fan studies, and other weirder and wider topics in 20th and 21st century literature and culture.">
+<meta name="twitter:image" content="https://www.emilyfoister.com/social-preview.jpg">
+
+<!-- Favicon -->
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+
+<!-- Fonts & CSS -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
@@ -52,5 +75,6 @@
 
 </body>
 </html> 
+
 
 
